--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </ul>
   <div class="circulo"></div>
 
-  <script src="testeprototype.js"></script>
+  <script src="strings.js"></script>
 </body>
 
 </html>
