--- a/index.html
+++ b/index.html
@@ -10,16 +10,27 @@
 </head>
 
 <body>
-  <h1>hello owrld</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo earum repudiandae possimus iste. Repudiandae expedita a harum eos tempora, maxime assumenda voluptas cumque alias tempore asperiores laboriosam! Repellendus, fugit distinctio?</p>
-  <ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-  </ul>
-  <div class="circulo"></div>
+  <section class="curso">
+    <h1>Web Design Completo</h1>
+    <p>Este curso é para quem deseja entrar ou já está no mercado de criação de websites.</p>
+    <span class="aulas">80</span>
+    <span class="horas">22</span>
+  </section>
+  <section class="curso">
+    <h1>WordPress Como CMS</h1>
+    <p>No curso de WordPress Como CMS, você aprende do zero como pegar qualquer site em HTML e torná-lo totalmente gerenciável com a plataforma do WordPress.</p>
+    <span class="aulas">46</span>
+    <span class="horas">9</span>
+  </section>
+  <section class="curso">
+    <h1>UI Design Avançado</h1>
+    <p>Este é um curso avançado de User Interface Design.</p>
+    <span class="aulas">55</span>
+    <span class="horas">15</span>
+  </section>
 
-  <script src="strings.js"></script>
+
+  <script src="arrays.js"></script>
 </body>
 
 </html>
